# Mancala

./: README.md  board.py  mancala_env.py  minimax.py  pyproject.toml  train.py
